--- a/css/_about.scss
+++ b/css/_about.scss
@@ -20,7 +20,7 @@
         margin: 0 2rem;
 
         p{
-            font-size: 1.8rem;
+            font-size: 2rem;
             line-height: 2rem;
             word-spacing: 4px;
             margin-bottom: 2rem;
@@ -30,7 +30,7 @@
             height: 9rem;
         }
         i{
-            color: $bleu;
+            color: $rouge;
             font-size: 2rem;
             margin: 2rem 2rem 0 2rem;
 
