--- a/css/_home.scss
+++ b/css/_home.scss
@@ -11,6 +11,7 @@
         i{
             font-size: 2rem;
         }
+    
     }
 
     .home-box{
@@ -49,6 +50,7 @@
                 line-height: 4rem;
                 padding: 2rem 0;
                 margin: 0 1rem;
+                text-align: center;
             }
         }
 
@@ -181,6 +183,9 @@
         margin-top: 6rem;
         margin-left: 2rem;
         z-index: 999;
+        h2{
+            font-size: 3.5rem;
+        }
     }
 
     @include sm{
@@ -190,13 +195,29 @@
         }
 
         .title{
-            margin-top: 4rem;
+            margin-top: 0rem;
             width: 100%;
+        }
+
+        .divider{
+            margin-top: 1rem !important;
+            margin-bottom: 1rem !important;
+        }
+
+        .button-contact{
+            margin-top: 3rem !important;
+        }
+
+        .description{
+            p{
+                text-align: center;
+            }
         }
 
         .video{
             width: 100%;
             margin-left: 0;
+            margin-top: 5rem !important;
         }
     }
 
