--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 6 version
+*/
+
 @charset "UTF-8";
 /* Landscape phones and down */
 /* Landscape phone to portrait tablet */
@@ -156,6 +163,12 @@ td:not([align]), th:not([align]) {
   font-family: 'Roboto', sans-serif;
 }
 
+::-moz-placeholder {
+  font-style: italic;
+  font-weight: 300;
+  font-family: 'Roboto', sans-serif;
+}
+
 ::placeholder {
   font-style: italic;
   font-weight: 300;
@@ -241,6 +254,7 @@ section {
   width: 50px;
   height: 50px;
   -webkit-transition: all 2s ease;
+  -o-transition: all 2s ease;
   transition: all 2s ease;
   -webkit-font-smoothing: antialiased;
 }
@@ -248,6 +262,7 @@ section {
 .gototop:hover {
   opacity: 0.5;
   -webkit-transition: opacity 0s ease;
+  -o-transition: opacity 0s ease;
   transition: opacity 0s ease;
 }
 
@@ -296,7 +311,8 @@ section {
   /* -75% */
   height: 200px;
   -webkit-transform: translateX(-50%) translateY(-50%);
-          transform: translateX(-50%) translateY(-50%);
+          -ms-transform: translateX(-50%) translateY(-50%);
+      transform: translateX(-50%) translateY(-50%);
   font-family: "Montserrat" !important;
   text-align: center;
   width: 100%;
@@ -373,6 +389,7 @@ section {
 
 .ip-header .ip-loader svg path.ip-loader-circle {
   -webkit-transition: stroke-dashoffset 0.2s;
+  -o-transition: stroke-dashoffset 0.2s;
   transition: stroke-dashoffset 0.2s;
   stroke: #fc7420;
 }
@@ -429,7 +446,8 @@ section {
 
 .loaded .ip-logo {
   -webkit-transform-origin: 50% 0;
-  transform-origin: 50% 0;
+  -ms-transform-origin: 50% 0;
+      transform-origin: 50% 0;
   -webkit-animation: animLoadedLogo 1s cubic-bezier(0.7, 0, 0.3, 1) forwards;
   animation: animLoadedLogo 1s cubic-bezier(0.7, 0, 0.3, 1) forwards;
 }
@@ -543,7 +561,8 @@ section {
   height: 180px;
   opacity: 1;
   -webkit-transform: none;
-  transform: none;
+  -ms-transform: none;
+      transform: none;
 }
 
 /*
@@ -588,6 +607,7 @@ nav {
   margin: 0;
   background-color: transparent;
   -webkit-transition: background 0.1s;
+  -o-transition: background 0.1s;
   transition: background 0.1s;
   z-index: 9999;
 }
@@ -599,6 +619,7 @@ nav {
 .topnav {
   border: none;
   -webkit-transition: background 0.1s;
+  -o-transition: background 0.1s;
   transition: background 0.1s;
   padding: 0;
   margin: 0;
@@ -607,6 +628,7 @@ nav {
 .navbar-collapse {
   background-color: transparent;
   -webkit-transition: background 0.1s;
+  -o-transition: background 0.1s;
   transition: background 0.1s;
   overflow-x: hidden;
 }
@@ -669,6 +691,7 @@ nav {
   stroke-dashoffset: 60;
   stroke-dasharray: 40, 150;
   -webkit-transition: all 1.15s cubic-bezier(0.19, 1, 0.22, 1);
+  -o-transition: all 1.15s cubic-bezier(0.19, 1, 0.22, 1);
   transition: all 1.15s cubic-bezier(0.19, 1, 0.22, 1);
   stroke: #fc7420;
 }
@@ -686,6 +709,7 @@ nav {
   stroke-width: 2;
   stroke-dasharray: 490, 0;
   -webkit-transition: all 0.35s linear;
+  -o-transition: all 0.35s linear;
   transition: all 0.35s linear;
 }
 
@@ -723,6 +747,7 @@ nav {
 .navbar-default .navbar-nav li:focus {
   color: #2085fc;
   -webkit-transition: color .3s;
+  -o-transition: color .3s;
   transition: color .3s;
 }
 
@@ -754,8 +779,10 @@ nav {
   color: #fff;
   background: #fc7420;
   -webkit-transform: rotate(360deg);
-  transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+      transform: rotate(360deg);
   -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
   transition: all 0.5s;
 }
 
@@ -772,7 +799,8 @@ nav {
   width: 35px;
   height: 35px;
   -webkit-transform: rotate(0deg);
-  transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+      transform: rotate(0deg);
 }
 
 .social-nav ul li i:hover {
@@ -998,7 +1026,8 @@ nav {
   left: 0;
   top: 50%;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+          -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
 }
 
 #home .title .button-contact a:before {
@@ -1039,6 +1068,7 @@ nav {
   background: #0f1923;
   position: absolute;
   -webkit-transition: 0.3s ease-out all;
+  -o-transition: 0.3s ease-out all;
   transition: 0.3s ease-out all;
 }
 
@@ -1050,9 +1080,11 @@ nav {
   height: 100%;
   z-index: 3;
   -webkit-transition: 0.3s ease-out all;
+  -o-transition: 0.3s ease-out all;
   transition: 0.3s ease-out all;
   -webkit-transform: skewX(-10deg);
-          transform: skewX(-10deg);
+          -ms-transform: skewX(-10deg);
+      transform: skewX(-10deg);
 }
 
 #home .title .button-contact a p span.text {
@@ -1067,6 +1099,7 @@ nav {
   left: 0;
   top: 0;
   -webkit-transition: 0.3s ease-out all;
+  -o-transition: 0.3s ease-out all;
   transition: 0.3s ease-out all;
 }
 
@@ -1079,6 +1112,7 @@ nav {
   background: #0f1923;
   position: absolute;
   -webkit-transition: 0.3s ease-out all;
+  -o-transition: 0.3s ease-out all;
   transition: 0.3s ease-out all;
   z-index: 5;
 }
@@ -1094,6 +1128,7 @@ nav {
 #home .title .button-contact a:hover span.text {
   color: #ece8e1;
   -webkit-transition: 0.3s ease-out all;
+  -o-transition: 0.3s ease-out all;
   transition: 0.3s ease-out all;
 }
 
@@ -1928,7 +1963,8 @@ nav {
   height: 50px;
   top: 50%;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+          -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
   margin: 0 auto;
   position: relative;
 }
@@ -2056,6 +2092,7 @@ nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background: -o-linear-gradient(330deg, #fc7420 50%, #13c9d7 50%);
   background: linear-gradient(120deg, #fc7420 50%, #13c9d7 50%);
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
@@ -2092,6 +2129,7 @@ nav {
 
 @media screen and (max-width: 576px) {
   #contact .contact-form-container .contact-me {
+    background: -o-linear-gradient(330deg, #fc7420 52.5%, #13c9d7 52.5%);
     background: linear-gradient(120deg, #fc7420 52.5%, #13c9d7 52.5%);
   }
   #contact .contact-form-container .contact-header h2 {
@@ -2196,7 +2234,8 @@ nav {
   display: var(--uismLinkDisplay);
   color: #000;
   -webkit-transition-duration: 0.4s;
-          transition-duration: 0.4s;
+          -o-transition-duration: 0.4s;
+     transition-duration: 0.4s;
   overflow: hidden;
 }
 
@@ -2212,9 +2251,11 @@ nav {
 #contact .contact-form-container .contact-form form .bouton-contact .btn i {
   margin: 0 auto;
   -webkit-transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
-          transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+          -o-transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+     transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
   -webkit-transition-duration: 0.4s;
-          transition-duration: 0.4s;
+          -o-transition-duration: 0.4s;
+     transition-duration: 0.4s;
 }
 
 #contact .contact-form-container .contact-form form .bouton-contact .btn:hover {
@@ -2224,7 +2265,8 @@ nav {
 
 #contact .contact-form-container .contact-form form .bouton-contact .btn:hover i {
   -webkit-transform: translateY(-400%) scale(-0.1, 20);
-  transform: translateY(-400%) scale(-0.1, 20);
+  -ms-transform: translateY(-400%) scale(-0.1, 20);
+      transform: translateY(-400%) scale(-0.1, 20);
   display: none;
 }
 
@@ -2239,17 +2281,20 @@ nav {
   bottom: 0;
   margin: auto;
   -webkit-transform: translateY(500%) scale(-0.1, 20);
-  transform: translateY(500%) scale(-0.1, 20);
+  -ms-transform: translateY(500%) scale(-0.1, 20);
+      transform: translateY(500%) scale(-0.1, 20);
 }
 
 #contact .contact-form-container .contact-form form .bouton-contact .btn:hover::before {
   letter-spacing: 0.05em;
   -webkit-transform: translateY(0) scale(1, 1);
-  transform: translateY(0) scale(1, 1);
+  -ms-transform: translateY(0) scale(1, 1);
+      transform: translateY(0) scale(1, 1);
 }
 
 footer {
   background: -webkit-gradient(linear, left top, left bottom, from(#18191A), to(#000000));
+  background: -o-linear-gradient(top, #18191A, #000000);
   background: linear-gradient(to bottom, #18191A, #000000);
 }
 
